# gmm7550-control-rp2040

./: .gitignore  .gitmodules  .justfile  CMakeLists.txt  LICENSE.txt  README.md  code.py  gmm7550.py
djtag/: pio_jtag.c
src/: adc.c  cli.c  gpio.c  i2c.c  jtag.c  main.c  pll.c  serial.c  spi.c  uart.c  usb.c  usb_descriptors.c
src/include/: FreeRTOSConfig.h  gmm7550_control.h  hex.h  pico_gmm7550.h  serial.h  tusb_config.h  uart.h  usb.h
tools/: gmm7550_spi.py
